Order orders by prices
